switch to URI because URL class is deprecated